# mk

./: MANIFEST.in  install.py  main.py  pyproject.toml
mk/: api.py  cli.py  handlers.py  models.py  settings.json  settings.py
test/: test_api.py  test_handlers_help.py  test_handlers_settings.py  test_settings.py
test/resources/: api_response  test_cli_settings.json  test_load_json_file.json  test_load_json_file_list.json  test_load_settings.json
